# agent-sandbox-eval

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  proposal.md  pyproject.toml
.github/workflows/: ci.yml
agent_sandbox_eval/: __init__.py  __main__.py  cli.py  config.py  extensions.py  runner.py  version.py
agent_sandbox_eval/agents/: __init__.py  base.py  noop.py  planner.py  react.py  registry.py  scripted.py
agent_sandbox_eval/benchmarks/: __init__.py  lint.py  loader.py  schema.py  splits.py
agent_sandbox_eval/eval/: __init__.py  failure_analysis.py  grader.py  metrics.py
agent_sandbox_eval/experiments/: __init__.py  artifacts.py  control_validation.py  identity.py  metrics.py  reports.py  runner.py  schema.py
docs/: agent-model-providers.md  benchmark-packs.md  ci-and-release.md  experiment-matrices.md  extensions.md  failure-analysis.md  model-runbook.md  research-and-optimization.md  sandbox-model.md  task-format.md  tool-protocol.md  trajectory-schema.md  v0.2.0-release-checklist.md
examples/: README.md
tests/: test_agents_provider.py  test_benchmark_splits.py  test_cli.py  test_control_validation.py  test_docker_sandbox.py  test_experiment_schema.py  test_extensions.py  test_grader.py  test_harness_manifest.py  test_matrix_runner.py  test_mcp_state_tool.py  test_openai_responses_provider.py  test_published_baseline.py  test_recorder_report_replay.py  test_runner.py  test_scripted_agent.py  test_task_lint.py  test_task_loader.py  test_workspace.py
tools/: build_harness_manifest.py  validate_matrix_controls.py
(+86 files in other folders)
